<resources>
    <string name="app_name">Drive3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Добавить</string>
    <string name="fragment_favorite">fragment_favorive</string>
    <string name="fragment_message">fragment_message</string>
    <string name="fragment_car">fragment_car</string>
    <string name="fragment_main">fragment_main</string>
    <string name="fragment_menu">fragment_menu</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Nwu3MUmoSJG4bsppstcU78DIYC7eVjtaNyu7qY17</string>
    <string name="back4app_client_key">Ic4iVhbf60VFbFFXeFt3ppNSUyhSJEfhloURZinX</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="to_sign_in">Войти</string>
    <string name="to_sign_up">Зарегестрироваться</string>
</resources>