<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_main">

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="ru.delayvi.drive3.presentation.screens.favorite_fragment.FavoriteFragment"
        android:label="@string/fragment_favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_message"
        android:name="ru.delayvi.drive3.presentation.screens.message_fragment.MessageFragment"
        android:label="@string/fragment_message"
        tools:layout="@layout/fragment_message" />
    <fragment
        android:id="@+id/navigation_menu"
        android:name="ru.delayvi.drive3.presentation.screens.menu_fragment.Menu_Fragment"
        android:label="@string/fragment_menu"
        tools:layout="@layout/fragment_menu" />
    <fragment
        android:id="@+id/navigation_main"
        android:name="ru.delayvi.drive3.presentation.screens.main_fragment.MainFragment"
        android:label="MainFragment" >
        <action
            android:id="@+id/action_navigation_main_to_navigation_show_car"
            app:destination="@id/navigation_show_car"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/navigation_car"
        android:name="ru.delayvi.drive3.presentation.screens.car_fragment.CarFragment"
        android:label="CarFragment" >
        <action
            android:id="@+id/action_navigation_car_to_navigation_show_car"
            app:destination="@id/navigation_show_car" />
    </fragment>
    <fragment
        android:id="@+id/navigation_show_car"
        android:name="ru.delayvi.drive3.presentation.screens.show_car_fragment.ShowCarFragment"
        android:label="fragment_show_car"
        tools:layout="@layout/fragment_show_car" >
        <action
            android:id="@+id/action_navigation_show_car_to_navigation_car"
            app:destination="@id/navigation_car" />
        <argument
            android:name="CarId"
            app:argType="integer" />
    </fragment>
</navigation>