<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLogin" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/to_sign_in"
            app:layout_constraintEnd_toStartOf="@id/buttonSignUp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/buttonSignIn"
            app:layout_constraintTop_toTopOf="@id/buttonSignIn" />

        <TextView
            android:id="@+id/tvCurrentUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Текущий пользователь"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <TextView
            android:id="@+id/tvIsAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Авторизован"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentUser" />

        <TextView
            android:id="@+id/tvCurrentUserDisplayName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tvCurrentUser"
            app:layout_constraintTop_toTopOf="@+id/tvCurrentUser" />

        <TextView
            android:id="@+id/tvIsAuthResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tvCurrentUser"
            app:layout_constraintTop_toTopOf="@+id/tvIsAuth" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvIsAuth"
            app:layout_constraintStart_toStartOf="@id/buttonSignIn"
            android:text="Выйти"
            android:layout_marginTop="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>